# AutoSim

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
autosim/: __init__.py  app.py
autosim/data/: instructions.txt  title.icns
